@@ -17,7 +17,7 @@
  *  any later version.
  *
  *  In addition, as a special exception, the copyright holders give permission 
- *  to link the code of portions of this program with the OpenSSL library under 
+ *  to link the code of portions of this program with the OpenSSL library under
  *  certain conditions as described in each individual source file, and 
  *  distribute linked combinations including the two. You must obey the GNU 
  *  General Public License in all respects for all of the code used other than 
@@ -60,5 +60,10 @@ extern int create_pidfile(const char *pidfilename);
  * pidfile (when pid != 0).
  */
 extern pid_t read_pidfile(const char *pidfilename, int *pidfilefd);
+
+/*
+ * Test for a core file limit. If small then log it.
+ */
+extern void test_core_limit(void);
 
 #endif /* !_HAVE_DAEMONIZE_H */
